--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 logo: "/assets/images/apslogo.png"
 
 baseurl: "/iot-sample-tutorial" # the subpath of your site, e.g. /blog
-url: "https://joaomartins-callmejohn.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://bimiottutorial.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # permalink: none
 
